--- a/template.yml
+++ b/template.yml
@@ -1,390 +1,31 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
+# some metadata about the template itself
 metadata:
-  namespace: default
-  annotations:
-    backstage.io/managed-by-location: url:https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/templates/single-spa-root.yaml
-    backstage.io/managed-by-origin-location: url:https://github.com/department-of-veterans-affairs/bip-bih-self-service/blob/main/templates.yaml
-    backstage.io/view-url: https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/templates/single-spa-root.yaml
-    backstage.io/edit-url: https://github.com/department-of-veterans-affairs/bip-bih-self-service/edit/main/templates/single-spa-root.yaml
-    backstage.io/source-location: url:https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/templates/
-  name: single-spa-root-dev
-  title: Single Spa Root Config - Dev
-  description: Automatically deploys a single spa root config in dev.
-  tags:
-    - archetype
-    - provisioning
-    - dev
-    - single-spa
-  allowedRoles:
-    - bip-bih-admins
-    - bip-bih-template-exec
-  uid: c352ca3e-2e82-495a-827e-6cc01866c842
-  etag: 04d4d069e4f575800e6e18710a0c0282d6669d5a
-relations:
-  - type: ownedBy
-    targetRef: group:default/bip-accelerators
-    target:
-      kind: group
-      namespace: default
-      name: bip-accelerators
+  name: hello-world
+  title: Hello World
+  description: scaffolder Hello, World template demo
 spec:
-  owner: group:bip-accelerators
-  type: provision
+  owner: backstage/techdocs-core
+  type: service
+
   parameters:
-    - title: Single Spa Root Config Overview
-      properties:
-        overview:
-          ui:field: TemplateOverviewExtension
-          name: Single Spa Root Template
-          header: Please take a brief moment to verify these steps prior to template run
-          bodyArrray:
-            - Verify
-              ***[these](/docs/default/component/bih/self-service/self-service/#prerequisites)***
-              self-service pre-requisites.
-          creationArray:
-            - Application and Charts
-            - New Repository for Application
-            - ArgoCD Charts Placed in Tenant Repository
-            - Jenkins Pipeline
-            - KeyCloak Client
-    - title: Jira Ticket and Tenant
+    - title: Fill in some steps
       required:
-        - jiraTicket
-        - projectNameSpacePrefix
+        - name
       properties:
-        jiraTicket:
-          title: Jira Ticket
+        name:
+          title: Name
           type: string
-          ui:help: Add your VA PM approved ticket number - BIH will add a comment to this
-            ticket at the end of this task detailing the resources created
-          ui:field: JiraValdiationFieldExtension
-        projectNameSpacePrefix:
-          title: Tenant (Namespace Prefix)
-          type: string
-          pattern: ^[a-z]*$
-          ui:help: All lower case, no spaces
-          default: bih
-          description: Deploy the application within an existing tenant. This will be
-            deployed in <tenant>-dev
+          description: Name of new project
           ui:autofocus: true
-    - title: Archetype properties for Single Spa
-      required:
-        - artifactId
-        - artifactName
-        - orgName
-        - realm
-      properties:
-        artifactId:
-          title: Artifact Id
-          type: string
-          pattern: ^[a-z]+(-[a-z]+)*$
-          ui:help: Kebab case
-          default: bip-bih-root-ui
-          description: The new project ID used for deployment, will also be used as Client
-            Id in KeyCloak
-          ui:autofocus: true
-        artifactName:
-          title: Artifact Name
-          type: string
-          ui:help: Kebab case
-          default: bih-root-ui
-          pattern: ^[a-z]+(-[a-z]+)*$
-          description: Name of the new project, usually same as artifactId without "bip-"
-            prefix
-          ui:autofocus: true
-        orgName:
-          title: Org Name
-          type: string
-          ui:help: Kebab case
-          default: va-bip
-          description: Organization owner
-          ui:autofocus: true
-        realm:
-          title: KeyCloak Realm
-          type: string
-          default: idp
-          description: The KeyCloak realm to integrate into
-          enum:
-            - crpdb
-            - csap
-            - docgen
-            - docgenmt
-            - examvrp
-            - idp
-    - title: CodeQL Configuration
-      required:
-        - codeQLSystemID
-        - codeQLSystemName
-        - codeQLSystemOwnerName
-        - ownerEmail
-      properties:
-        codeQLSystemID:
-          title: System ID
-          type: string
-          description: System ID of this application
-          default: "2068"
-        codeQLSystemName:
-          title: System Name
-          type: string
-          description: System Name of this application
-          default: bip-bih-root-ui
-        codeQLSystemOwnerName:
-          title: System Owner
-          type: string
-          description: System Owner of this application
-          default: BIP Platform Accelerators
-        ownerEmail:
-          title: System Owner
-          type: string
-          description: Email linked to owner of this application
-          default: E_API_Framework@bah.com
-    - title: Catalog File
-      required:
-        - entityOwner
-        - entitySystem
-        - setupDocs
-      properties:
-        entityOwner:
-          title: Application's Tenant
-          type: string
-          description: The Entity Owner
-          ui:help: Usually the Namespace Prefix
-          enum:
-            - NA
-            - archetypetest
-            - bah
-            - benefits-services
-            - bffs
-            - bih
-            - blue
-            - bpds
-            - bss
-            - bteam
-            - cap
-            - cest
-            - cfapi
-            - claims
-            - cpui
-            - crp-utils
-            - crp
-            - data-synchronization
-            - dbq-portal
-            - dmdt
-            - docgen
-            - empwr
-            - exam-destination
-            - exam-mgmt
-            - fiduciary-service
-            - fti-capture
-            - fti-file-repo
-            - fti-soap
-            - ibs
-            - mbms
-            - pacman
-            - pension-automation
-            - platform-engineering
-            - platform-system-team
-            - platform
-            - pur
-            - rrc
-            - vasrd
-            - vbms-awards
-            - vbms-ratings
-            - vbms-vet-form-fillin
-            - vbmsc
-            - vefs-claimevidence
-            - vefs-rrc
-            - vefs
-            - vetdep
-            - work-queue
-        entitySystem:
-          title: Application's Product
-          type: string
-          enum:
-            - NA
-            - bep
-            - bgs
-            - bia-services
-            - bip-platform
-            - crp
-            - empwr
-            - mbms
-            - vbms
-        setupDocs:
-          title: Do you want BIH to publish the Docs for this application?
-          type: string
-          enum:
-            - "true"
-            - "false"
-          enumNames:
-            - Yes
-            - No
-    - title: Choose a location to Publish
-      required:
-        - repoName
-      properties:
-        repoName:
-          title: Application Repository Name
-          type: string
-          description: "Must be a unique name in github. Suggested to be the same as
-            ArtifactId. Example: bip-bih-root-ui"
-          pattern: ^[a-z0-9]+(-[a-z0-9]+)*$
-          ui:help: Kebab case
-    - title: Assign Collaborators to Your New Application's Repo
-      properties:
-        adminTeams:
-          type: array
-          items:
-            type: string
-          title: Github teams with admin permissions.
-          ui:help: A list of teams you would like to have ADMIN access to the repo.
-          ui:field: GithubTeams
-        writeTeams:
-          type: array
-          items:
-            type: string
-          title: Github teams with write permissions.
-          ui:help: A list of teams you would like to have WRITE access to the repo.
-          ui:field: GithubTeams
-    - title: Input Tenant Chart Configurations - values can be found in the
-        bip-tenant-argocd repo
-      required:
-        - chartRepoName
-        - argoProject
-      properties:
-        chartRepoName:
-          title: Tenant Chart Repository Name
-          type: string
-          description: Name of the tenant config repository where we will place the
-            application charts
-        argoProject:
-          title: Argo Project
-          type: string
-          ui:help: Project to deploy in ArgoCD
-          default: bia-bih
+          ui:options:
+            rows: 5
+
+  # here's the steps that are executed in series in the scaffolder backend
   steps:
-    - id: scaffolder-metrics-track
-      action: scaffolderMetrics:trackTask
-    - id: get-credentials
-      name: Grabbing Credentials
-      action: custom:getToken
-    - action: custom:github:actions:dispatch:wait
-      name: Dispatch Github Action Workflow
+    - id: log-message
+      name: Log Message
+      action: debug:log
       input:
-        repoUrl: github.com?repo=bip-archetype-generator&owner=department-of-veterans-affairs
-        workflowId: archetype_generator.yml
-        token: ${{ steps['get-credentials'].output.SCAFFOLDER_CREDENTIALS }}
-        branchOrTagName: main
-        workflowInputs:
-          createCharts: "true"
-          publishArchetype: "true"
-          archetypeTest: "false"
-          jsonInput: >
-            { "archetype": "bip-mfe-root-archetype",
-              "createCharts": "true",
-              "publishArchetype": "true",
-              "artifactName": "${{ parameters.artifactName }}",
-              "newRepoName": "${{ parameters.repoName }}",
-              "newRepoPrivate": "false",
-              "repoDescription": "This is a single spa root app in the ${{ parameters.projectNameSpacePrefix }}-dev namespace",
-              "newRepoCommitMessage": "Initial Commit of the ${{ parameters.artifactName }} single-spa root config",
-              "organizationName": "department-of-veterans-affairs",
-              "orgName": "${{ parameters.orgName }}",
-              "namespacePrefix": "${{ parameters.projectNameSpacePrefix }}",
-              "artifactId": "${{ parameters.artifactId }}",
-              "chartRepo": "${{ parameters.chartRepoName }}",
-              "codeQLSystemID": "${{ parameters.codeQLSystemID }}",
-              "codeQLSystemName": "${{ parameters.codeQLSystemName }}",
-              "codeQLSystemOwnerName": "${{ parameters.codeQLSystemOwnerName }}",
-              "ownerEmail": "${{ parameters.ownerEmail }}",
-              "description": "This is a single spa root app in the ${{ parameters.projectNameSpacePrefix }}-dev namespace",
-              "entityOwner": "${{ parameters.entityOwner }}",
-              "entitySystem": "${{ parameters.entitySystem }}",
-              "setupDocs": "${{ parameters.setupDocs }}",
-              "port": "8080",
-              "argoProject": "${{ parameters.argoProject }}",
-              "jinja_ignore": [
-                  "/target/",
-                  "/node_modules/",
-                  ".ico",
-                  ".DS_Store",
-                  ".classpath",
-                  ".jks",
-                  ".settings",
-                  ".pdf",
-                  "/.git/"
-              ],
-              "rename_files": [
-                {
-                  "app/src/va-bip-vbms-root-ui.js": "app/src/${{ parameters.orgName }}-${{ parameters.artifactName }}.js"
-                },
-                {
-                  "argo-charts/argocd-apps/templates/artifactId.yaml": "argo-charts/argocd-apps/templates/${{ parameters.artifactId }}.yaml"
-                }
-              ],
-              "rename_folders": [
-                {
-                  "argo-charts/charts/artifactId": "argo-charts/charts/${{ parameters.artifactId }}"
-                }
-              ]
-            }
-    - id: add-collaborators
-      name: Adding collaborators
-      action: custom:addCollaborators
-      input:
-        adminTeams: ${{ parameters.adminTeams}}
-        writeTeams: ${{ parameters.writeTeams}}
-        repo: ${{ parameters.repoName }}
-    - id: keycloak-clientid
-      name: Create a Client ID on KeyCloak
-      action: custom:createKeycloakClientId
-      input:
-        clientId: ${{ parameters.artifactId }}-dev
-        name: ${{ parameters.artifactId }}-dev
-        rootUrl: https://${{ parameters.artifactId }}.dev.bip.va.gov
-        adminUrl: https://${{ parameters.artifactId }}.dev.bip.va.gov
-        redirectUris:
-          - https://ssologon.int.iam.va.gov/centrallogin/centrallanding.aspx*
-          - /*
-          - https://${{ parameters.artifactId }}.dev.bip.va.gov/*
-        webOrigins:
-          - https://${{ parameters.artifactId }}.dev.bip.va.gov
-        baseUrl: https://bss-int.dev.bip.va.gov
-        realm: ${{ parameters.realm }}
-    - id: createJenkinsPipeline
-      name: Creating Jenkins Pipeline
-      action: custom:createJenkinsPipeline
-      input:
-        repoName: ${{ parameters.repoName }}
-        jenkinsNamespace: ${{ parameters.projectNameSpacePrefix }}
-        template: self-service-base-template
-        jenkinsTemplateNamespace: bih
-    - id: comment-ticket-jira
-      name: Leaving Comment on Jira Ticket
-      action: custom:addCommentAction
-      input:
-        jiraTicket: ${{ parameters.jiraTicket }}
-        appRepoUrl: https://github.com/department-of-veterans-affairs/${{
-          parameters.repoName }}
-        chartRepoUrl: https://github.com/department-of-veterans-affairs/${{
-          parameters.chartRepoName }}
-        jenkinsPipelineUrl: ${{ steps['createJenkinsPipeline'].output.SCAFFOLDER_JENKINS_URL }}
-        argoProjectUrl: https://argo.dev.bip.va.gov/applications/${{
-          parameters.artifactId }}-dev
-  output:
-    links:
-      - title: Application Repo
-        icon: github
-        url: https://github.com/department-of-veterans-affairs/${{ parameters.repoName
-          }}
-      - title: Tenant Chart Repo
-        icon: scaffolder
-        url: https://github.com/department-of-veterans-affairs/${{
-          parameters.chartRepoName }}
-      - title: Jenkins Build
-        icon: docs
-        url: ${{ steps['createJenkinsPipeline'].output.SCAFFOLDER_JENKINS_URL }}
-      - title: ArgoCd Project
-        icon: techdocs
-        url: https://argo.dev.bip.va.gov/applications/${{ parameters.artifactId }}-dev
+        message: "Hello, ${{ parameters.name }}"
