--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,4 +8,4 @@ spec:
   lifecycle: production
   owner: petstore@example.com
   definition:
-    $text: https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/templates.yaml
+    $text: https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/
