--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,2 +1,11 @@
 apiVersion: backstage.io/v1alpha1
-$yaml: https://github.com/cyberbutler/backstage-template/tree/main/template.yml
+kind: API
+metadata:
+  name: petstore
+  description: The Petstore API
+spec:
+  type: openapi
+  lifecycle: production
+  owner: petstore@example.com
+  definition:
+    $text: https://github.com/department-of-veterans-affairs/bip-bih-self-service/tree/main/README.md
